--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 shadowsocksr:
-  image: breakwa11/shadowsocksr
+  image: sundayle/shadowsocksr
   ports:
     - "8388:8388/tcp"
     - "8388:8388/udp"
