--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,6 @@ shadowsocksr:
     - "8388:8388/tcp"
     - "8388:8388/udp"
   environment:
-    - METHOD=aes-256-gcm
-    - PASSWORD=9MLSpPmNt
+    - METHOD=chacha20-ietf
+    - PASSWORD=sundayle
   restart: always
